tests/shell/assignment_newline.out
[1;46m  Syntax error:
Module: ~/chaos/__interactive__.kaos
[0;46m    Line: 2
[0;46m    Cause: \n

You have chosen the order!
