tests/shell/assignment_newline.kaos
num b = 123
b = 
